added twitter link

--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
 		</div>
 	</section>
 	
+	<section class="section-social-links">
+		<div class="social-links-container">
+			<h4>Follow the game development</h4>
+			<a class="social-link-button twitter" href="https://twitter.com/ItsPaperGuy" target="_blank"><img  src="./images/img_twitter.svg" alt="Twitter"/></a>
+		</div>
+	</section>
+	
 	<hr>
 	
 	<section class="section-credits">
