--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
- 	<meta charset="UTF-8">
+<head>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
   	<title>It's Paper Guy! | Paper Team</title>
@@ -11,13 +11,33 @@
   	
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script type="text/javascript" src="lightbox/js/lightbox.min.js"></script>
-  </head>
-  <body>
-  	<section class="section-header">
+
+</head>
+<body>
+
+<div class="parallax">
+
+	<div class="parallax__group">
+	  <div class="parallax__layer parallax__layer--7"></div>
+	  <div class="parallax__layer parallax__layer--6"></div>
+	  <div class="parallax__layer parallax__layer--5"></div>
+  		<div class="header-logo parallax__layer">
+  			<img src="./images/img_logo.png" alt="It's Paper Guy!" />
+  		</div>
+	  <div class="parallax__layer parallax__layer--4"></div>
+	  <div class="parallax__layer parallax__layer--3"></div>
+      <div class="parallax__layer parallax__layer--2"></div>
+      <div class="parallax__layer parallax__layer--1"></div>
+ 	</div>
+	
+	<div class="content">
+	
+		<section class="section-header">
   		<div class="header-logo">
   			<img src="./images/img_logo.png" alt="It's Paper Guy!" />
   		</div>
-  	</section>
+  		</section>
+
 
 	<section class="section-download">
 		<div class="download-container">
@@ -135,5 +155,8 @@
 			<br/><a id="text-link" href="https://jonasdutouquet.github.io/presskit/ItsPaperGuy" target="_blank">Press Kit</a>
 		</div>
 	</footer>
-  </body>
+	</div>
+</div>
+
+</body>
 </html>
