--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   	
   	<link rel="stylesheet" href="style.css">
   	<link href="lightbox/css/lightbox.css" rel="stylesheet" type='text/css'>
+  	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
   	
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script type="text/javascript" src="lightbox/js/lightbox.min.js"></script>
@@ -31,7 +32,7 @@
  	</div>
 	
 	<div class="content">
-	
+		
 		<section class="section-header">
   		<div class="header-logo">
   			<img src="./images/img_logo.png" alt="It's Paper Guy!" />
@@ -43,7 +44,7 @@
 		<div class="download-container">
 	  		<h2>Download the free demo!</h2>
 	  		<h3>(Only on PC &amp Mac)</h3>
-	  		<a class="download-button" href="https://paper-team.itch.io/paper-guy" target="_blank"><img  src="./images/img_itch.png" alt="Download on itch.io"/></a>
+	  		<a class="download-button" href="https://paper-team.itch.io/paper-guy" target="_blank"><img src="./images/img_itch.png" alt="Download on itch.io"/></a>
 		</div>
 	</section>
 	
@@ -127,12 +128,53 @@
 		</div>
 	</section>
 	
+	<!-- Former Twitter link
 	<section class="section-social-links">
 		<div class="social-links-container">
 			<h4>Follow the game development</h4>
 			<a class="social-link-button twitter" href="https://twitter.com/ItsPaperGuy" target="_blank"><img  src="./images/img_twitter.svg" alt="Twitter"/></a>
 		</div>
 	</section>
+	-->
+	
+		<!-- Begin MailChimp Signup Form -->
+	<section class="section-mail-signup">
+		<h4>It's cute, sign up!</h4>
+		<div class="signup-container">
+		
+			<form action="https://itch.us19.list-manage.com/subscribe/post?u=77447f17d3ea986182f3f6c6d&amp;id=05067e632c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+				<!-- <div id="mc_embed_signup_scroll"> -->
+				
+				<div class= "signup">
+					<div class="signup-field">
+						<input type="email" placeholder="Enter your email" name="EMAIL" class="required email" id="mce-EMAIL">
+					</div>
+			
+					<div id="mce-responses" class="clear">
+						<div class="response" id="mce-error-response" style="display:none"></div>
+						<div class="response" id="mce-success-response" style="display:none"></div>
+					</div>   
+					 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+			
+					<div style="position: absolute; left: -5000px;" aria-hidden="true">
+						<input type="text" name="b_77447f17d3ea986182f3f6c6d_05067e632c" tabindex="-1" value="">
+					</div>
+					<div class="clear subscribe">
+						<input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button">
+					</div>
+				</div>
+				<!-- </div> -->
+			</form>
+		</div>
+		
+		<div class="social-links-container">
+			<a class="social-link-button twitter" href="https://twitter.com/ItsPaperGuy" target="_blank"><img  src="./images/img_twitter.svg" alt="Twitter"/></a>
+			<a class="social-link-button facebook" href="https://www.facebook.com/" target="_blank"><img  src="./images/img_fb.svg" alt="Facebook"/></a>
+			<a class="social-link-button facebook" href="https://www.youtube.com/channel/UCDZv56mDpBk3eaToFsZauiw/featured" target="_blank"><img  src="./images/img_youtube.svg" alt="Youtube"/></a>
+		</div>
+	</section>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
 	
 	<hr>
 	
