--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 						<input type="text" name="b_77447f17d3ea986182f3f6c6d_05067e632c" tabindex="-1" value="">
 					</div>
 					<div class="clear subscribe">
-						<input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button">
+						<input type="submit" value="Submit" name="subscribe" class="button">
 					</div>
 				</div>
 				<!-- </div> -->
