--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
   	
   	<link rel="stylesheet" href="style.css">
   	<link href="lightbox/css/lightbox.css" rel="stylesheet" type='text/css'>
+<!-- 
   	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-  	
-  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script type="text/javascript" src="lightbox/js/lightbox.min.js"></script>
-
+ -->
 </head>
 <body>
 
@@ -143,8 +141,6 @@
 		<div class="signup-container">
 		
 			<form action="https://itch.us19.list-manage.com/subscribe/post?u=77447f17d3ea986182f3f6c6d&amp;id=05067e632c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-				<!-- <div id="mc_embed_signup_scroll"> -->
-				
 				<div class= "signup">
 					<div class="signup-field">
 						<input type="email" placeholder="Enter your email" name="EMAIL" class="required email" id="mce-EMAIL">
@@ -163,7 +159,6 @@
 						<input type="submit" value="Submit" name="subscribe" class="button">
 					</div>
 				</div>
-				<!-- </div> -->
 			</form>
 		</div>
 		
@@ -173,7 +168,6 @@
 			<a class="social-link-button facebook" href="https://www.youtube.com/channel/UCDZv56mDpBk3eaToFsZauiw/featured" target="_blank"><img  src="./images/img_youtube.svg" alt="Youtube"/></a>
 		</div>
 	</section>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
 	
 	<hr>
@@ -199,6 +193,11 @@
 	</footer>
 	</div>
 </div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script type="text/javascript" src="lightbox/js/lightbox.min.js"></script>
+	<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+	<script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 
 </body>
 </html>
