--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 	
 	<section class="section-screenshots flex">
 		<div class="screenshots-container flex">
-			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-1.png"><img src="images/screenshot-1.png" alt=""></a>
-			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-2.png"><img src="images/screenshot-2.png" alt=""></a>
-			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-3.png"><img src="images/screenshot-3.png" alt=""></a>
-			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-4.png"><img src="images/screenshot-4.png" alt=""></a>
-			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-5.png"><img src="images/screenshot-5.png" alt=""></a>
-			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-6.png"><img src="images/screenshot-6.png" alt=""></a>
+			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-1.png"><img src="images/screenshot-1_thumbnail_small.png" srcset="images/screenshot-1_thumbnail_small.png 1x, images/screenshot-1_thumbnail_big.png 2x" alt=""></a>
+			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-2.png"><img src="images/screenshot-2_thumbnail_small.png" srcset="images/screenshot-2_thumbnail_small.png 1x, images/screenshot-2_thumbnail_big.png 2x" alt=""></a>
+			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-3.png"><img src="images/screenshot-3_thumbnail_small.png" srcset="images/screenshot-3_thumbnail_small.png 1x, images/screenshot-3_thumbnail_big.png 2x" alt=""></a>
+			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-4.png"><img src="images/screenshot-4_thumbnail_small.png" srcset="images/screenshot-4_thumbnail_small.png 1x, images/screenshot-4_thumbnail_big.png 2x" alt=""></a>
+			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-5.png"><img src="images/screenshot-5_thumbnail_small.png" srcset="images/screenshot-5_thumbnail_small.png 1x, images/screenshot-5_thumbnail_big.png 2x" alt=""></a>
+			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-6.png"><img src="images/screenshot-6_thumbnail_small.png" srcset="images/screenshot-6_thumbnail_small.png 1x, images/screenshot-6_thumbnail_big.png 2x" alt=""></a>
 		</div>
 	</section>
 	
