modify presskit link

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 	
 	<footer>
 		<div class="copyright">
-			<p> &copy; 2018 <a id="text-link" href="https://jonasdutouquet.github.io/presskit/" target="_blank">Paper Team</a>. All rights reserved.</p>
-			<br/><a id="text-link" href="https://jonasdutouquet.github.io/presskit/ItsPaperGuy" target="_blank">Press Kit</a>
+			<p> &copy; 2018 <a id="text-link" href="./presskit/" target="_blank">Paper Team</a>. All rights reserved.</p>
+			<br/><a id="text-link" href="./presskit/ItsPaperGuy/" target="_blank">Press Kit</a>
 		</div>
 	</footer>
 	</div>
