add creative gaming award

--- a/index.html
+++ b/index.html
@@ -84,10 +84,14 @@
 	
 	<section class="section-awards flex">
 	
-		<div class="awards-container">
+		<div class="awards-container flex">
 		
-			<div class="award igc">
+			<div class="award">
 				<a class="award-img" href="http://strasbourgfestival.com/le-festival-2018-jeux-video-et-realite-virtuelle/" target="_blank"><img src="images/img_igc_small.png" srcset="images/img_igc_small.png 1x, images/img_igc_big.png 2x" alt="Indie Game Contest Finalist" height="100" /></a>
+			</div>
+			
+			<div class="award">
+				<a class="award-img" href="https://playfestival.de/play18/en/category/nominees/" target="_blank"><img src="images/play18_nominee.svg" alt="Creative Gaming Award - Most Innovative Newcomer" height="200" /></a>
 			</div>
 			
 		</div>
