--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
+	<meta property="og:title" content="It's Paper Guy!">
+	<meta property="og:description" content="Discover the cute and poetic world of Paper Guy in this feel-good game for children of all ages. It's cute, let's cut!">
+	<meta property="og:image" content="./images/miniature.png">
+	<meta name="twitter:card" content="./images/miniature.png">
+	
   	<title>It's Paper Guy! | Paper Team</title>
   	
   	<link rel="stylesheet" href="style.css">
