--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta property="og:title" content="It's Paper Guy!">
 	<meta property="og:description" content="Discover the cute and poetic world of Paper Guy in this feel-good game for children of all ages. It's cute, let's cut!">
 	<meta property="og:image" content="./images/miniature.png">
-	<meta name="twitter:card" content="./images/miniature.png">
+	<meta name="twitter:card" content="summary_large_image">
 	
   	<title>It's Paper Guy! | Paper Team</title>
   	
