--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	<meta property="og:title" content="It's Paper Guy!">
 	<meta property="og:description" content="Discover the cute and poetic world of Paper Guy in this feel-good game for children of all ages. It's cute, let's cut!">
-	<meta property="og:image" content="./images/miniature.png">
+	<meta property="og:image" content="https://itspaperguy.com/miniature.png">
 	<meta name="twitter:card" content="summary_large_image">
 	
   	<title>It's Paper Guy! | Paper Team</title>
