--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	
   	<title>It's Paper Guy! | Paper Team</title>
   	
+  	<link rel="shortcut icon" href="presskit/images/ItsPaperGuy/favicon.ico?t=1537701369779">
+  	
   	<link rel="stylesheet" href="style.css">
   	<link href="lightbox/css/lightbox.css" rel="stylesheet" type='text/css'>
 <!-- 
