balise meta pour referencement

--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 	<meta property="og:image" content="https://itspaperguy.com/images/thumbnail.png">
 	<meta name="twitter:card" content="summary_large_image">
 	
+	<meta name="It's Paper Guy! - Free demo available" content="Discover the cute and poetic world of Paper Guy in this feel-good game for children of all ages. It's cute, let's cut!">
+	
   	<title>It's Paper Guy! | Paper Team</title>
   	
   	<link rel="stylesheet" href="style.css">
   	<link href="lightbox/css/lightbox.css" rel="stylesheet" type='text/css'>
-<!-- 
-  	<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
- -->
 </head>
 <body>
 
