--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 	<footer>
 		<div class="copyright">
 			<p> &copy; 2018 <a id="text-link" href="./presskit/" target="_blank">Paper Team</a>. All rights reserved.</p>
-			<br/><a id="text-link" href="./presskit/ItsPaperGuy/" target="_blank">Press Kit</a>
+			<br/><p><a id="text-link" href="./presskit/ItsPaperGuy/" target="_blank">Press Kit</a> | <a id="text-link" href="mailto:contact@itspaperguy.com" target="_blank">Contact</a></p>
 		</div>
 	</footer>
 	</div>
