--- a/index.html
+++ b/index.html
@@ -101,13 +101,20 @@
 		<div class="awards-container flex">
 		
 			<div class="award">
-				<a class="award-img" href="http://strasbourgfestival.com/le-festival-2018-jeux-video-et-realite-virtuelle/" target="_blank"><img src="images/img_igc_small.png" srcset="images/img_igc_small.png 1x, images/img_igc_big.png 2x" alt="Indie Game Contest Finalist" height="100" /></a>
+				<a class="award-img" href="https://www.afjv.com/news/9251_les-jeux-etudiants-nommes-a-la-6e-ceremonie-des-ping-awards.htm?fbclid=IwAR2ZOBQiWsVFe70OkhyVeAmO5815ozJGsdYwJEQg7o5WWias80uH40O5_Xk" target="_blank"><img src="images/ping_awards.svg"alt="Ping Awards" height="120" /></a>
 			</div>
 			
 			<div class="award">
-				<a class="award-img" href="https://playfestival.de/play18/en/category/nominees/" target="_blank"><img src="images/play18_nominee.svg" alt="Creative Gaming Award - Most Innovative Newcomer" height="200" /></a>
+				<a class="award-img" href="http://www.ludicious.ch/" target="_blank"><img src="images/ludicious.svg" alt="Ludicious Awards - Emerging Talent" height="120" /></a>
 			</div>
 			
+			<div class="award">
+				<a class="award-img" href="https://playfestival.de/play18/en/category/nominees/" target="_blank"><img src="images/play18_nominee.png" alt="Creative Gaming Award - Most Innovative Newcomer" height="100" /></a>
+			</div>
+		
+			<div class="award">
+				<a class="award-img" href="http://strasbourgfestival.com/le-festival-2018-jeux-video-et-realite-virtuelle/" target="_blank"><img src="images/img_igc.svg" alt="Indie Game Contest Finalist" height="100" /></a>
+			</div>
 		</div>
 	
 	</section>
