--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 	<meta property="og:image" content="https://itspaperguy.com/images/thumbnail.png">
 	<meta name="twitter:card" content="summary_large_image">
 	
-	<meta name="It's Paper Guy! - Free demo available" content="Discover the cute and poetic world of Paper Guy in this feel-good game for children of all ages. It's cute, let's cut!">
+	<meta name="description" content=" It's cute, let's cut! Discover the cute and poetic world of Paper Guy in this feel-good game for children of all ages."/>
+	<meta name="google" content="notranslate"/>
 	
-  	<title>It's Paper Guy! | Paper Team</title>
+  	<title>It's Paper Guy! | Free demo available</title>
   	
   	<link rel="stylesheet" href="style.css">
   	<link href="lightbox/css/lightbox.css" rel="stylesheet" type='text/css'>
@@ -95,6 +96,11 @@
 			<a class="screenshot" data-lightbox="screenshots" href="images/screenshot-6.png"><img src="images/screenshot-6_thumbnail_small.png" srcset="images/screenshot-6_thumbnail_small.png 1x, images/screenshot-6_thumbnail_big.png 2x" alt=""></a>
 		</div>
 	</section>
+	
+	<div class="awards-container flex">
+	
+		<a class="award-img" href="http://www.igf.com/article/2019-independent-games-festival-reveals-years-finalists" target="_blank"><img src="images/img_igf.svg" alt="Independent Game Festival 2019" height="280" /></a>
+	</div>
 	
 	<section class="section-awards flex">
 	
